--- a/src/app/chatroom/chatroom.component.html
+++ b/src/app/chatroom/chatroom.component.html
@@ -2,42 +2,76 @@
   <h2>{{ this.firestoreService.channel.channelName }}</h2>
 
   <div #scrollContainer class="massages" id="messageBox">
-    <mat-card
-      class="message"
-      *ngFor="
-        let message of this.firestoreService.filteredMessages ||
-          this.firestoreService.messages
-      "
-    >
-      <div class="post-headline">
-        <img
-          class="profile"
-          src="{{ message.photoURL }}"
-          alt="{{ message.displayName }}"
-        />
-        <span>{{ message.displayName }}</span>
+    <ng-container *ngIf="this.firestoreService.filteredMessages.length == 0">
+      <mat-card
+        class="message"
+        *ngFor="let message of this.firestoreService.messages"
+      >
+        <div class="post-headline">
+          <img
+            class="profile"
+            src="{{ message.photoURL }}"
+            alt="{{ message.displayName }}"
+          />
+          <span>{{ message.displayName }}</span>
 
-        <button
-          *ngIf="message.uid == this.authService.userData.uid"
-          mat-icon-button
-          class="pin-right-upper-corner"
-          [matMenuTriggerFor]="userMenu"
-        >
-          <mat-icon>more_vert</mat-icon>
-        </button>
-        <mat-menu #userMenu="matMenu">
-          <button mat-menu-item (click)="this.dialogEditMessage(message)">
-            Edit
+          <button
+            *ngIf="message.uid == this.authService.userData.uid"
+            mat-icon-button
+            class="pin-right-upper-corner"
+            [matMenuTriggerFor]="userMenu"
+          >
+            <mat-icon>more_vert</mat-icon>
           </button>
-          <button mat-menu-item (click)="this.dialogDeleteMessage(message)">
-            Delete
+          <mat-menu #userMenu="matMenu">
+            <button mat-menu-item (click)="this.dialogEditMessage(message)">
+              Edit
+            </button>
+            <button mat-menu-item (click)="this.dialogDeleteMessage(message)">
+              Delete
+            </button>
+          </mat-menu>
+        </div>
+        <div>
+          {{ message.message }}
+        </div>
+      </mat-card>
+    </ng-container>
+    <ng-container *ngIf="this.firestoreService.filteredMessages.length !== 0">
+      <mat-card
+        class="message"
+        *ngFor="let message of this.firestoreService.filteredMessages"
+      >
+        <div class="post-headline">
+          <img
+            class="profile"
+            src="{{ message.photoURL }}"
+            alt="{{ message.displayName }}"
+          />
+          <span>{{ message.displayName }}</span>
+
+          <button
+            *ngIf="message.uid == this.authService.userData.uid"
+            mat-icon-button
+            class="pin-right-upper-corner"
+            [matMenuTriggerFor]="userMenu"
+          >
+            <mat-icon>more_vert</mat-icon>
           </button>
-        </mat-menu>
-      </div>
-      <div>
-        {{ message.message }}
-      </div>
-    </mat-card>
+          <mat-menu #userMenu="matMenu">
+            <button mat-menu-item (click)="this.dialogEditMessage(message)">
+              Edit
+            </button>
+            <button mat-menu-item (click)="this.dialogDeleteMessage(message)">
+              Delete
+            </button>
+          </mat-menu>
+        </div>
+        <div>
+          {{ message.message }}
+        </div>
+      </mat-card>
+    </ng-container>
   </div>
 
   <form
