--- a/src/app/direct-message/direct-message.component.html
+++ b/src/app/direct-message/direct-message.component.html
@@ -1,108 +1,58 @@
 <div class="chatroom">
-  <h2>{{ this.firestoreService.participantUserName }}</h2>
-  <div
-    #scrollContainer
-    *ngIf="this.firestoreService.directChatMessages"
-    class="massages"
-    id="messageBox"
-  >
-    <div
-      *ngIf="this.firestoreService.directChatMessages.length == 0"
-      class="no-messages-container"
-    >
-      <i style="color: var(--primary-col)" class="material-icons">error</i>
-      <h2>Here are no messages yet.</h2>
+    <h2>{{ this.firestoreService.participantUserName }}</h2>
+    <div #scrollContainer *ngIf="this.firestoreService.directChatMessages" class="massages" id="messageBox">
+        <div *ngIf="this.firestoreService.directChatMessages.length == 0" class="no-messages-container">
+            <i style="color: var(--primary-col)" class="material-icons">error</i>
+            <h2>Here are no messages yet.</h2>
+        </div>
+        <ng-container *ngIf="!this.utilService.isFiltered">
+            <mat-card class="message" *ngFor="let message of this.firestoreService.directChatMessages">
+                <div class="post-headline">
+                    <img class="profile" src="{{ message.photoURL }}" alt="{{ message.displayName }}" />
+                    <span>{{ message.displayName }}</span>
+                    <button *ngIf="message.uid == this.authService.userData.uid" mat-icon-button class="pin-right-upper-corner" [matMenuTriggerFor]="userMenu">
+            <mat-icon>more_vert</mat-icon>
+          </button>
+                    <mat-menu #userMenu="matMenu">
+                        <button mat-menu-item (click)="this.dialogEditMessageDM(message)">
+              Edit
+            </button>
+                        <button mat-menu-item (click)="this.dialogDeleteMessageDM(message)">
+              Delete
+            </button>
+                    </mat-menu>
+                </div>
+                <div>{{ message.message }}</div>
+            </mat-card>
+        </ng-container>
+        <ng-container *ngIf="this.utilService.isFiltered">
+            <mat-card class="message" *ngFor="let message of this.firestoreService.filteredDirectMessages">
+                <div class="post-headline">
+                    <img class="profile" src="{{ message.photoURL }}" alt="{{ message.displayName }}" />
+                    <span>{{ message.displayName }}</span>
+                    <button *ngIf="message.uid == this.authService.userData.uid" mat-icon-button class="pin-right-upper-corner" [matMenuTriggerFor]="userMenu">
+            <mat-icon>more_vert</mat-icon>
+          </button>
+                    <mat-menu #userMenu="matMenu">
+                        <button mat-menu-item (click)="this.dialogEditMessageDM(message)">
+              Edit
+            </button>
+                        <button mat-menu-item (click)="this.dialogDeleteMessageDM(message)">
+              Delete
+            </button>
+                    </mat-menu>
+                </div>
+                <div>{{ message.message }}</div>
+            </mat-card>
+        </ng-container>
     </div>
-    <ng-container *ngIf="!this.utilService.isFiltered">
-      <mat-card
-        class="message"
-        *ngFor="let message of this.firestoreService.directChatMessages"
-      >
-        <div class="post-headline">
-          <img
-            class="profile"
-            src="{{ message.photoURL }}"
-            alt="{{ message.displayName }}"
-          />
-          <span>{{ message.displayName }}</span>
-          <button
-            *ngIf="message.uid == this.authService.userData.uid"
-            mat-icon-button
-            class="pin-right-upper-corner"
-            [matMenuTriggerFor]="userMenu"
-          >
-            <mat-icon>more_vert</mat-icon>
-          </button>
-          <mat-menu #userMenu="matMenu">
-            <button mat-menu-item (click)="this.dialogEditMessageDM(message)">
-              Edit
-            </button>
-            <button mat-menu-item (click)="this.dialogDeleteMessageDM(message)">
-              Delete
-            </button>
-          </mat-menu>
-        </div>
-        <div>{{ message.message }}</div>
-      </mat-card>
-    </ng-container>
-    <ng-container *ngIf="messagesExist && this.utilService.isFiltered">
-      <mat-card
-        class="message"
-        *ngFor="let message of this.firestoreService.filteredDirectMessages"
-      >
-        <div class="post-headline">
-          <img
-            class="profile"
-            src="{{ message.photoURL }}"
-            alt="{{ message.displayName }}"
-          />
-          <span>{{ message.displayName }}</span>
-          <button
-            *ngIf="message.uid == this.authService.userData.uid"
-            mat-icon-button
-            class="pin-right-upper-corner"
-            [matMenuTriggerFor]="userMenu"
-          >
-            <mat-icon>more_vert</mat-icon>
-          </button>
-          <mat-menu #userMenu="matMenu">
-            <button mat-menu-item (click)="this.dialogEditMessageDM(message)">
-              Edit
-            </button>
-            <button mat-menu-item (click)="this.dialogDeleteMessageDM(message)">
-              Delete
-            </button>
-          </mat-menu>
-        </div>
-        <div>{{ message.message }}</div>
-      </mat-card>
-    </ng-container>
-  </div>
-  <form
-    [formGroup]="directMessageForm"
-    (submit)="onSubmit()"
-    class="message-container"
-  >
-    <mat-form-field appearance="fill">
-      <mat-label>Your Message</mat-label>
-      <textarea
-        formControlName="directMessage"
-        minlength="1"
-        #messageInput
-        matInput
-        cdkTextareaAutosize
-        #autosize="cdkTextareaAutosize"
-        cdkAutosizeMinRows="5"
-        cdkAutosizeMaxRows="10"
-      ></textarea>
-    </mat-form-field>
-    <button
-      [disabled]="messageInput.value == ''"
-      [ngClass]="{ 'primary-btn': messageInput.value != '' }"
-      type="submit"
-      mat-raised-button
-    >
+    <form [formGroup]="directMessageForm" (submit)="onSubmit()" class="message-container">
+        <mat-form-field appearance="fill">
+            <mat-label>Your Message</mat-label>
+            <textarea formControlName="directMessage" minlength="1" #messageInput matInput cdkTextareaAutosize #autosize="cdkTextareaAutosize" cdkAutosizeMinRows="5" cdkAutosizeMaxRows="10"></textarea>
+        </mat-form-field>
+        <button [disabled]="messageInput.value == ''" [ngClass]="{ 'primary-btn': messageInput.value != '' }" type="submit" mat-raised-button>
       Post
     </button>
-  </form>
+    </form>
 </div>
