--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -56,6 +56,7 @@
               class="search_field hide_mobile"
               (keyup)="filter(searchValue.value)"
               #searchValue
+              [(ngModel)]="this.utilService.searchInput"
             />
           </mat-form-field>
         </div>
