--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -46,7 +46,7 @@
       <mat-toolbar-row>
         <div class="header-left">
           <mat-icon class="menu-icon" (click)="drawer.toggle()">menu</mat-icon>
-          <mat-form-field appearance="standard">
+          <mat-form-field appearance="standard" *ngIf="this.utilService.searchBarActivated">
             <input
               name="search"
               type="text"
