open new tab for legal-notice links

--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -28,5 +28,5 @@
             <a class="auth-link" (click)="this.utils.redirectToLogin()" [routerLink]="['/sign-up']" routerLinkActive="router-link-active">Sign in to an existing worksapce</a>
         </div>
     </div>
-    <a class="legal-notice-link auth-link" routerLink="/legal-notice">Imprint <span>|</span> Privacy Policy</a>
+    <a class="legal-notice-link auth-link" routerLink="/legal-notice" target="_blank">Imprint <span>|</span> Privacy Policy</a>
 </div>
