--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -37,7 +37,7 @@
                 <mat-icon>logout</mat-icon>Log Out
             </li>
         </ul>
-        <a class="legal-notice-link" routerLink="/legal-notice">Imprint <span>|</span> Privacy Policy</a
+        <a class="legal-notice-link" routerLink="/legal-notice" target="_blank">Imprint <span>|</span> Privacy Policy</a
     >
   </mat-drawer>
 
