--- a/src/app/get-started/get-started.component.html
+++ b/src/app/get-started/get-started.component.html
@@ -17,4 +17,4 @@
     </div>
     <img class="bg-img" src="assets/images/start-bg.png" alt="" />
 </div>
-<a class="legal-notice-link" routerLink="/legal-notice">Imprint <span>|</span> Privacy Policy</a>
+<a class="legal-notice-link" routerLink="/legal-notice" target="_blank">Imprint <span>|</span> Privacy Policy</a>
