--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -35,4 +35,4 @@
         </div>
     </div>
 </div>
-<a class="legal-notice-link auth-link" routerLink="/legal-notice">Imprint <span>|</span> Privacy Policy</a>
+<a class="legal-notice-link auth-link" routerLink="/legal-notice" target="_blank">Imprint <span>|</span> Privacy Policy</a>
