--- a/src/app/components/chat/chat.component.scss
+++ b/src/app/components/chat/chat.component.scss
@@ -158,6 +158,16 @@ summary {
     }
 }
 
+.guest-user-dm-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.only-registered-users {
+    font-size: 12px;
+    color: var(--error-col);
+}
+
 .legal-notice-link {
     position: absolute;
     transform: translate(-50%, -50%);
