align and lowercase all channel names

--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -1,5 +1,5 @@
 <mat-card class="">
-    <h2>Welcome</h2>
+    <h2># welcome</h2>
     <div>
         Welcome to the Slack-Clone app.<br> You can chat with your coworkers in different groups and directly to each other.<br><br> You also can create new chatrooms.
     </div>
