--- a/src/app/components/channels/channels.component.html
+++ b/src/app/components/channels/channels.component.html
@@ -1,5 +1,5 @@
 <div class="chatroom">
-    <h2>{{ this.firestoreService.channel.channelName }}</h2>
+    <h2># {{ this.firestoreService.channel.channelName }}</h2>
 
     <div #scrollContainer class="massages" id="messageBox">
         <div *ngIf="
