--- a/src/app/components/channels/channels.component.html
+++ b/src/app/components/channels/channels.component.html
@@ -69,7 +69,7 @@
     <form [formGroup]="messageForm" (submit)="onSubmit()" class="message-container">
         <mat-form-field appearance="fill">
             <mat-label>Your Message</mat-label>
-            <textarea formControlName="message" minlength="1" #messageInput matInput cdkTextareaAutosize #autosize="cdkTextareaAutosize" cdkAutosizeMinRows="5" cdkAutosizeMaxRows="10"></textarea>
+            <textarea onkeydown="if (event.keyCode == 13) { this.form.requestSubmit(); return false; }" formControlName="message" minlength="1" #messageInput matInput cdkTextareaAutosize #autosize="cdkTextareaAutosize" cdkAutosizeMinRows="5" cdkAutosizeMaxRows="10"></textarea>
         </mat-form-field>
         <button [disabled]="messageInput.value == ''" [ngClass]="{ 'primary-btn': messageInput.value != '' }" type="submit" mat-raised-button>
       Post
