--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<router-outlet></router-outlet>
+<router-outlet *ngIf="!this.utils.loading"></router-outlet>
+<app-loading-screen *ngIf="this.utils.loading"></app-loading-screen>
