--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,47 +1,68 @@
 <mat-drawer-container class="mat-drawer-container" autosize>
-    <mat-drawer #drawer class="sidenav" [opened]="true" mode="side">
-        <div class="logo-container" (click)="drawer.toggle()">
-            <img class="logo" src="./../../assets/images/logo.svg" alt="Logo" />
-            <span>Slack Clone</span>
-        </div>
+  <mat-drawer #drawer class="sidenav" [opened]="true" mode="side">
+    <div class="logo-container" (click)="drawer.toggle()">
+      <img class="logo" src="./../../assets/images/logo.svg" alt="Logo" />
+      <span>Slack Clone</span>
+    </div>
 
-        <ul class="menu-items">
-            <details open>
-                <summary>Channels</summary>
-                <ul>
-                    <li [routerLink]="['/chat/welcome']" routerLinkActive="router-link-active" (click)="this.toggleNav()">
-                        <span># welcome</span>
-                    </li>
-                    <li *ngFor="let channel of this.firestoreService.allChannels" (click)="
+    <ul class="menu-items">
+      <details open>
+        <summary>Channels</summary>
+        <ul>
+          <li
+            [routerLink]="['/chat/welcome']"
+            routerLinkActive="router-link-active"
+            (click)="this.toggleNav()"
+          >
+            <span># welcome</span>
+          </li>
+          <li
+            *ngFor="let channel of this.firestoreService.allChannels"
+            (click)="
               openChat('/chat/ch/', channel.customIdName); this.toggleNav()
-            ">
-                        <span># {{ channel.channelName }}</span>
-                    </li>
-                    <li (click)="openCreateChannelDialog()">
-                        <mat-icon>add</mat-icon>
-                        <span>Create new channel</span>
-                    </li>
-                </ul>
-            </details>
-
-            <div class="guest-user-dm-container" *ngIf="this.authService.userData && this.authService.userData.isAnonymous">
-                <span>Direct messages</span>
-                <span class="only-registered-users">(Only for registered users)</span>
-            </div>
-            <details open *ngIf="this.authService.userData && !this.authService.userData.isAnonymous">
-                <summary>Direct messages</summary>
-                <ul class="menu-items">
-                    <li *ngFor="let user of this.firestoreService.allOtherUsers" (click)="openDirectMessage('/chat/dm/', user.uid)">
-                        <span>{{ user.displayName }}</span>
-                    </li>
-                </ul>
-            </details>
-
-            <li (click)="this.authService.logOut()">
-                <mat-icon>logout</mat-icon>Log Out
-            </li>
+            "
+          >
+            <span># {{ channel.channelName }}</span>
+          </li>
+          <li (click)="openCreateChannelDialog()">
+            <mat-icon>add</mat-icon>
+            <span>Create new channel</span>
+          </li>
         </ul>
-        <a class="legal-notice-link" routerLink="/legal-notice" target="_blank">Imprint <span>|</span> Privacy Policy</a
+      </details>
+
+      <div
+        class="guest-user-dm-container"
+        *ngIf="
+          this.authService.userData && this.authService.userData.isAnonymous
+        "
+      >
+        <span>Direct messages</span>
+        <span class="only-registered-users">(Only for registered users)</span>
+      </div>
+      <details
+        open
+        *ngIf="
+          this.authService.userData && !this.authService.userData.isAnonymous
+        "
+      >
+        <summary>Direct messages</summary>
+        <ul class="menu-items">
+          <li
+            *ngFor="let user of this.firestoreService.allOtherUsers"
+            (click)="openDirectMessage('/chat/dm/', user.uid)"
+          >
+            <span>{{ user.displayName }}</span>
+          </li>
+        </ul>
+      </details>
+
+      <li (click)="this.authService.logOut()">
+        <mat-icon>logout</mat-icon>Log Out
+      </li>
+    </ul>
+    <a class="legal-notice-link" routerLink="/legal-notice" target="_blank"
+      >Imprint <span>|</span> Privacy Policy</a
     >
   </mat-drawer>
 
@@ -50,22 +71,18 @@
       <mat-toolbar-row>
         <div class="header-left">
           <mat-icon class="menu-icon" (click)="drawer.toggle()">menu</mat-icon>
-          <mat-form-field
-            appearance="standard"
+          <input
             *ngIf="this.utilService.searchBarActivated"
-          >
-            <input
-              name="search"
-              type="text"
-              placeholder="search message"
-              matInput
-              autocomplete="on"
-              class="search_field hide_mobile"
-              (keyup)="filterMessages(searchValue.value)"
-              #searchValue
-              [(ngModel)]="this.utilService.searchInput"
-            />
-          </mat-form-field>
+            name="search"
+            type="text"
+            placeholder="Search message"
+            matInput
+            autocomplete="on"
+            class="search_field hide_mobile"
+            (keyup)="filterMessages(searchValue.value)"
+            #searchValue
+            [(ngModel)]="this.utilService.searchInput"
+          />
         </div>
         <div *ngIf="authService.userData as user" class="user-container">
           <span class="user-name">{{ user.displayName }}</span>
