--- a/src/app/components/main/main.component.scss
+++ b/src/app/components/main/main.component.scss
@@ -1,214 +1,222 @@
 .mat-drawer-container {
-    height: 100vh;
-    background-color: rgb(231, 231, 231);
+  height: 100vh;
+  background-color: rgb(231, 231, 231);
 }
 
 .menu-icon {
-    margin-right: 50px;
-    &:hover {
-        cursor: pointer;
-    }
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .sidenav {
-    width: 300px;
-    background-color: rgb(84, 21, 84);
-    color: white;
+  width: 300px;
+  background-color: rgb(84, 21, 84);
+  color: white;
 }
 
 .logo-container {
-    border-bottom: 1px solid rgba($color: #000000, $alpha: 0.2);
-    padding-left: 12px;
-    padding-right: 16px;
-    min-height: 35px;
-    display: flex;
-    align-items: center;
-    background-color: rgb(64, 18, 64);
+  border-bottom: 1px solid rgba($color: #000000, $alpha: 0.2);
+  padding-left: 12px;
+  padding-right: 16px;
+  min-height: 35px;
+  display: flex;
+  align-items: center;
+  background-color: rgb(64, 18, 64);
+  span {
+    font-weight: 500;
+  }
 }
 
 .logo {
-    height: 30px;
-    width: 30px;
-    padding-right: 12px;
-    padding-left: 12px;
+  height: 24px;
+  width: 24px;
+  padding-right: 12px;
+  padding-left: 12px;
 }
 
 mat-toolbar,
 mat-toolbar-row {
-    min-height: 36px;
-    height: 36px;
-    background-color: rgb(64, 18, 64);
-    color: white;
+  min-height: 36px;
+  height: 36px;
+  background-color: rgb(64, 18, 64);
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  .header-left {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    .header-left {
-        display: flex;
-        align-items: center;
-    }
+    width: 100%;
+  }
+}
+
+mat-form-field {
+  flex: 1;
 }
 
 .menu-items {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  list-style-type: none;
+  padding: 0 0 0 16px;
+  margin: 16px 0 32px 16px;
+  li {
+    padding-right: 16px;
+    height: 30px;
     display: flex;
-    flex-direction: column;
-    gap: 8px;
-    list-style-type: none;
-    padding: 0 0 0 16px;
-    margin: 16px 0 32px 16px;
-    li {
-        padding-right: 16px;
-        height: 30px;
-        display: flex;
-        align-items: center;
-        cursor: pointer;
-        mat-icon {
-            margin-right: 4px;
-        }
-        &:hover {
-            background-color: rgba($color: #000000, $alpha: 0.1);
-        }
-        &:focus {
-            outline: none;
-        }
+    align-items: center;
+    cursor: pointer;
+    mat-icon {
+      margin-right: 4px;
     }
+    &:hover {
+      background-color: rgba($color: #000000, $alpha: 0.1);
+    }
+    &:focus {
+      outline: none;
+    }
+  }
 }
 
 summary {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .logout {
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    mat-icon {
-        margin-right: 16px;
-    }
-    &:hover {
-        background-color: rgba($color: #000000, $alpha: 0.1);
-    }
-    &:focus {
-        outline: none;
-    }
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  mat-icon {
+    margin-right: 16px;
+  }
+  &:hover {
+    background-color: rgba($color: #000000, $alpha: 0.1);
+  }
+  &:focus {
+    outline: none;
+  }
 }
 
 .logout {
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    margin: 0 0 32px 16px;
-    mat-icon {
-        margin-right: 16px;
-    }
-    &:hover {
-        background-color: rgba($color: #000000, $alpha: 0.1);
-    }
-    &:focus {
-        outline: none;
-    }
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  margin: 0 0 32px 16px;
+  mat-icon {
+    margin-right: 16px;
+  }
+  &:hover {
+    background-color: rgba($color: #000000, $alpha: 0.1);
+  }
+  &:focus {
+    outline: none;
+  }
 }
 
 .router-container {
-    padding-left: 56px;
-    padding-top: 16px;
-    padding-right: 56px;
+  padding-left: 56px;
+  padding-top: 16px;
+  padding-right: 56px;
 }
 
 .search_field {
-    color: #000000;
-    z-index: 9999;
-    height: 18px;
-    width: 300px;
-    background-color: rgba(235, 235, 235, 0.35);
-    border: 0px;
-    border-radius: 7px;
-    padding: 5px;
-    margin-left: 20px;
-    margin-right: 20px;
-    &:focus {
-        outline: none;
-        background-color: rgb(248, 247, 247);
-    }
-    &:hover {
-        cursor: pointer;
-        opacity: 0.8;
-    }
+  color: #fff;
+  z-index: 9999;
+  height: 18px;
+  width: 100%;
+  background-color: rgba(173, 173, 173, 0.35);
+  border: 1px solid transparent;
+  border-radius: 7px;
+  padding: 5px;
+  margin: 0 50px 0 50px;
+  font-size: 14px;
+  font-weight: 400;
+  &:focus {
+    outline: none;
+    background-color: rgba(64, 64, 64, 0.35);
+  }
+  &:hover {
+    cursor: pointer;
+    border: 1px solid #fff;
+  }
 }
 
-.user-container {
+input:focus::-webkit-input-placeholder {
+  color: red;
+}
+
+::placeholder {
+  display: flex;
+  align-items: center;
+  color: #fff;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.search_field .user-container {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  span {
+    font-size: 16px;
+  }
+  a {
     display: flex;
     align-items: center;
-    gap: 8px;
-    span {
-        font-size: 16px;
-    }
-    a {
-        display: flex;
-        align-items: center;
-    }
+  }
 }
 
 .profile-picture {
-    width: 24px;
-    height: 24px;
-    border-radius: 100%;
-    &:hover {
-        cursor: pointer;
-        opacity: 0.8;
-    }
+  width: 24px;
+  height: 24px;
+  border-radius: 100%;
+  &:hover {
+    cursor: pointer;
+    opacity: 0.8;
+  }
 }
 
 .guest-user-dm-container {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .only-registered-users {
-    font-size: 12px;
-    color: var(--error-col);
+  font-size: 12px;
+  color: var(--error-col);
 }
 
 .legal-notice-link {
-    position: absolute;
-    transform: translate(-50%, -50%);
-    left: 50%;
-    bottom: 16px;
-    color: white;
-    text-decoration: none;
-    &:hover {
-        text-decoration: underline;
-    }
+  position: absolute;
+  transform: translate(-50%, -50%);
+  left: 50%;
+  bottom: 16px;
+  color: white;
+  text-decoration: none;
+  &:hover {
+    text-decoration: underline;
+  }
 }
 
 @media (max-width: 1000px) {
-    .router-container {
-        padding-left: 8px;
-        padding-right: 8px;
-    }
-    .search_field {
-        margin-left: 20px;
-        width: 70%;
-    }
-    .menu-icon {
-        margin-right: 0;
-    }
-    // .profile {
-    //     margin-left: -120px;
-    // }
-    .mat-drawer-container {
-        overflow-x: hidden;
-    }
-}
+  .router-container {
+    padding-left: 8px;
+    padding-right: 8px;
+  }
 
-@media (max-width: 700px) {
-    .user-name {
-        display: none;
-    }
+  .mat-drawer-container {
+    overflow-x: hidden;
+  }
 }
 
 @media (max-width: 400px) {
-    .sidenav {
-        width: 100vw;
-        max-width: 100%;
-    }
+  .sidenav {
+    width: 100vw;
+    max-width: 100%;
+  }
+  .search_field {
+    margin: 0 20px 0 20px;
+  }
 }
