feat: search for users

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -75,7 +75,7 @@
             *ngIf="this.utilService.searchBarActivated"
             name="search"
             type="text"
-            placeholder="Search message"
+            placeholder="Search messages or users"
             matInput
             autocomplete="on"
             class="search_field hide_mobile"
