fixed typo in dialog

--- a/src/app/components/dialog-already-logged-in/dialog-already-logged-in.component.html
+++ b/src/app/components/dialog-already-logged-in/dialog-already-logged-in.component.html
@@ -6,6 +6,6 @@
 <div mat-dialog-content>
     <button class="secondary-btn" routerLink="/chat" (click)="this.dialogRef.close(); this.firestoreService.updateUser(this.authService.userData.uid)" mat-raised-button>
         <mat-icon>login</mat-icon>
-        <span>Go to Dashboard</span>
+        <span>Go to Chat</span>
     </button>
 </div>
